# lms

./: .env  .env.template  .gitignore  Dockerfile  Makefile  Procfile  README.md  db.sqlite3  deploy.py  docker-compose.yml  docker-prod.yml  entrypoint.sh  heroku.yaml  manage.py  models_sqlalchemy.py  pyproject.toml  tasks.py  urls.py
.circleci/: config.yml
apps/: __init__.py  celery_app.py
apps/about/: urls.py  views.py
apps/assessment/: admin.py  api_urls.py  forms.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
apps/assessment/migrations/: 0001_initial.py  0002_initial.py  0003_remove_mark_answer_response_mark.py  0004_alter_response_mark_alter_response_task.py  0005_alter_response_description.py  0006_answer_delete_response.py  0007_alter_answer_task.py  0008_alter_mark_teacher.py  0009_alter_answer_mark_alter_mark_teacher.py  0010_alter_answer_student.py
apps/assessment/templates/: create_answer.html
apps/authentication/: admin.py  api_urls.py  form.py  forms.py  models.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_user_position.py  0003_remove_user_is_staff_remove_user_is_superuser.py  0004_alter_user_position.py  0005_alter_user_position.py  0006_remove_user_position.py  0007_user_position.py  0008_user_photo.py  0009_alter_user_photo.py  0010_alter_user_photo.py  0011_alter_user_photo.py  0012_alter_user_photo.py
apps/authentication/templates/: account_base.html  login.html  password_reset_confirm.html  password_reset_form.html  profile.html  profile_body.html  register.html  settings.html  template_activate_account.html  users.html
apps/authentication/templatetags/: user_extras.py
apps/home/: tests.py  urls.py  views.py
apps/home/templates/: home.html  index.html
apps/lesson/: urls.py  views.py
apps/management/: admin.py  api_urls.py  filters.py  forms.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
apps/management/migrations/: 0001_initial.py  0002_alter_task_deadline.py  0003_alter_task_deadline.py  0004_alter_task_deadline_alter_task_description.py  0005_alter_task_description.py  0006_alter_task_deadline.py  0007_alter_task_deadline.py  0008_alter_course_students_alter_task_deadline.py  0009_alter_task_deadline.py  0010_alter_task_deadline.py  0011_alter_task_deadline.py  (+11 more)
apps/random_app/: apps.py  urls.py  views.py
apps/user/: admin.py  models.py
client/: index.html  package-lock.json
client/lms/: README.md  package-lock.json  package.json
client/src/: App.vue
config/: asgi.py  wsgi.py
config/settings/: base.py  dev.py  docker.py  prod.py  test.py
static/: styles.css
templates/: base.html  base1.html  dialogs.html  footer.html  form.html  form_errors.html  header.html  input_form.html  logged_in_header.html  logged_out_header.html  messages.html  submit.html
templates/emails/: email_base.html  message_base.txt
(+22 files in other folders)
