[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Anastasiia Olifir <a.o.olifir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
django-tinymce = "^4.1.0"
django-storages = {extras = ["s3"], version = "^1.14.4"}
boto3 = "^1.36.15"
django-bootstrap5 = "^24.3"
django-filter = "^24.3"
pytz = "^2025.1"
django-debug-toolbar = "^5.0.1"
social-auth-app-django = "^5.4.3"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.1"
ipython = "^8.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
