[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["Anastasiia Olifir <a.o.olifir@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
django-tinymce = "^4.1.0"
django-storages = {extras = ["s3"], version = "^1.14.4"}
boto3 = "^1.36.15"
django-bootstrap5 = "^24.3"
django-filter = "^24.3"
social-auth-app-django = "^5.4.3"
celery = "^5.4.0"
django-settings-export = "^1.2.1"
redis = "^5.2.1"
kombu = "^5.4.2"
django-celery-beat = "^2.7.0"
django-messages = "^0.6.0"
requests = "^2.32.3"
django-celery-results = "^2.5.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
drf-yasg = "^1.21.8"
python-dotenv = "^1.0.1"
dotenv = "^0.9.9"
mypy = "^1.15.0"
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.3"
boto3-stubs = "^1.37.13"
django-filter-stubs = "^0.1.3"
celery-stubs = "^0.1.3"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.1"
ipython = "^8.31.0"
black = {extras = ["d"], version = "^25.1.0"}
django-stubs = "^5.1.3"
djangorestframework-stubs = "^3.15.3"
boto3-stubs = "^1.37.13"
debugpy = "^1.8.13"
drf-yasg-stubs = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
